--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
             <div class="image-container">
-                <img src="image.jpg" alt="Profile Picture">
+                <img src="image.jpg.jpg" alt="Profile Picture">
             </div>
         </section>
 
